--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   font-family: 'Inter', sans-serif;
 }
 
+* {
+  font-family: 'Inter', sans-serif;
+}
+
 /* Font display optimization */
 @font-face {
   font-family: 'Inter';
